[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/Scenes/Platform.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Scripts/World.gd" type="Script" id=3]
[ext_resource path="res://src/Scenes/DeathScreen.tscn" type="PackedScene" id=4]
[ext_resource path="res://transitionPlaceholder.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 200 )

[sub_resource type="Animation" id=2]
resource_name = "FadeIn"
length = 0.8
tracks/0/type = "bezier"
tracks/0/path = NodePath("TransitionPlaceholder:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.8 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("TransitionPlaceholder:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.8 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("TransitionPlaceholder:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.8 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("TransitionPlaceholder:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.8 )
}

[sub_resource type="Animation" id=3]
resource_name = "FadeOut"
length = 0.8
tracks/0/type = "bezier"
tracks/0/path = NodePath("TransitionPlaceholder:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.8 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("TransitionPlaceholder:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.8 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("TransitionPlaceholder:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.8 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("TransitionPlaceholder:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.8 )
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("TransitionPlaceholder:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("TransitionPlaceholder:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("TransitionPlaceholder:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("TransitionPlaceholder:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[node name="World" type="Node2D"]
script = ExtResource( 3 )

[node name="Platform1" parent="." instance=ExtResource( 1 )]
position = Vector2( 40, 488 )

[node name="Platform2" parent="." instance=ExtResource( 1 )]
position = Vector2( 88, 488 )

[node name="Platform3" parent="." instance=ExtResource( 1 )]
position = Vector2( 136, 488 )

[node name="Platform4" parent="." instance=ExtResource( 1 )]
position = Vector2( 184, 488 )

[node name="Platform5" parent="." instance=ExtResource( 1 )]
position = Vector2( 232, 488 )

[node name="Platform6" parent="." instance=ExtResource( 1 )]
position = Vector2( 280, 488 )

[node name="Platform7" parent="." instance=ExtResource( 1 )]
position = Vector2( 328, 488 )

[node name="Platform8" parent="." instance=ExtResource( 1 )]
position = Vector2( 376, 488 )

[node name="Platform9" parent="." instance=ExtResource( 1 )]
position = Vector2( 424, 488 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 232, 520 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 272, 456 )
current = true
zoom = Vector2( 0.4, 0.4 )

[node name="DeathScreen" parent="Camera2D" instance=ExtResource( 4 )]
position = Vector2( 0, -16 )

[node name="RichTextLabel" type="RichTextLabel" parent="Camera2D"]
margin_left = -104.0
margin_top = -136.0
margin_right = 104.0
margin_bottom = -112.0
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( -24, 402 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 24, 46 )
shape = SubResource( 1 )

[node name="TransitionPlaceholder" type="Sprite" parent="."]
position = Vector2( 272, 456 )
scale = Vector2( 14, 20 )
texture = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FadeIn = SubResource( 2 )
anims/FadeOut = SubResource( 3 )
anims/RESET = SubResource( 4 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
